--- a/src/fiskaltrust.Middleware.Interface.Client.Common.StrongName/fiskaltrust.Middleware.Interface.Client.Common.StrongName.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Common.StrongName/fiskaltrust.Middleware.Interface.Client.Common.StrongName.csproj
@@ -1,25 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
-    <LangVersion>8</LangVersion>
-    <IsPackable>false</IsPackable>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>../fiskaltrust.interface.StrongName/fiskaltrust.interface.snk</AssemblyOriginatorKeyFile>
-    <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
+		<LangVersion>8</LangVersion>
+		<IsPackable>false</IsPackable>
+		<SignAssembly>true</SignAssembly>
+		<AssemblyOriginatorKeyFile>../fiskaltrust.interface.StrongName/fiskaltrust.interface.snk</AssemblyOriginatorKeyFile>
+	</PropertyGroup>
 
-  <ItemGroup>
-		<ProjectReference Include="..\fiskaltrust.ifPOS\fiskaltrust.interface.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="fiskaltrust.interface.StrongName" Version="1.3.50-rc1" />
+	</ItemGroup>
 
-  <Target DependsOnTargets="ResolveReferences" Name="CopyProjectReferencesToPackage">
-    <ItemGroup>
-      <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
-    </ItemGroup>
-  </Target>
-  
-  <ItemGroup>
-    <Compile Include="..\fiskaltrust.Middleware.Interface.Client.Common\**\*.cs" Exclude="..\fiskaltrust.Middleware.Interface.Client.Common\obj\**\*.cs" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Include="..\fiskaltrust.Middleware.Interface.Client.Common\**\*.cs" Exclude="..\fiskaltrust.Middleware.Interface.Client.Common\obj\**\*.cs" />
+	</ItemGroup>
 </Project>
