--- a/src/fiskaltrust.Middleware.Interface.Client.Common/fiskaltrust.Middleware.Interface.Client.Common.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Common/fiskaltrust.Middleware.Interface.Client.Common.csproj
@@ -1,13 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>net461;netstandard2.0;net6</TargetFrameworks>
-    <LangVersion>8</LangVersion>
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>net461;netstandard2.0;net6</TargetFrameworks>
+		<LangVersion>8</LangVersion>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
 
-  <ItemGroup>
-		<ProjectReference Include="..\fiskaltrust.ifPOS\fiskaltrust.interface.csproj" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<PackageReference Include="fiskaltrust.interface" Version="1.3.50-rc1" />
+	</ItemGroup>
 </Project>
