--- a/src/fiskaltrust.Middleware.Interface.Client.Grpc/fiskaltrust.Middleware.Interface.Client.Grpc.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Grpc/fiskaltrust.Middleware.Interface.Client.Grpc.csproj
@@ -2,10 +2,10 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>net461;netstandard2.0;net6</TargetFrameworks>
-		<TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
 	</PropertyGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' != 'net6' ">
+		<PackageReference Include="fiskaltrust.interface" Version="1.3.50-rc1" />
 		<PackageReference Include="Grpc.Core" Version="2.28.1" />
 		<PackageReference Include="protobuf-net.Grpc.Native" Version="1.0.37" />
 	</ItemGroup>
@@ -16,7 +16,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\fiskaltrust.ifPOS\fiskaltrust.interface.csproj" />
 		<ProjectReference Include="..\fiskaltrust.Middleware.Interface.Client.Common\fiskaltrust.Middleware.Interface.Client.Common.csproj">
 			<PrivateAssets>all</PrivateAssets>
 		</ProjectReference>
@@ -36,12 +35,6 @@
 			<PackagePath>lib\net6.0\</PackagePath>
 		</_PackageFiles>
 	</ItemGroup>
-
-    <Target DependsOnTargets="ResolveReferences" Name="CopyProjectReferencesToPackage">
-        <ItemGroup>
-            <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
-        </ItemGroup>
-    </Target>
 
 	<PropertyGroup>
 		<PackageId>fiskaltrust.Middleware.Interface.Client.Grpc</PackageId>
