--- a/src/fiskaltrust.Middleware.Interface.Client.Http.StrongName/fiskaltrust.Middleware.Interface.Client.Http.StrongName.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Http.StrongName/fiskaltrust.Middleware.Interface.Client.Http.StrongName.csproj
@@ -1,27 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461;netstandard2.0;net6</TargetFrameworks>
+    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
     <LangVersion>8</LangVersion>
-    <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="fiskaltrust.interface.StrongName" Version="1.3.50-rc1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\fiskaltrust.ifPOS\fiskaltrust.interface.csproj" />
     <ProjectReference Include="..\fiskaltrust.Middleware.Interface.Client.Common.StrongName\fiskaltrust.Middleware.Interface.Client.Common.StrongName.csproj">
       <PrivateAssets>all</PrivateAssets>
     </ProjectReference>
   </ItemGroup>
-
-  <Target DependsOnTargets="ResolveReferences" Name="CopyProjectReferencesToPackage">
-    <ItemGroup>
-      <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
-    </ItemGroup>
-  </Target>
 
   <ItemGroup>
     <Compile Include="..\fiskaltrust.Middleware.Interface.Client.Http\**\*.cs" Exclude="..\fiskaltrust.Middleware.Interface.Client.Http\obj\**\*.cs" />
