--- a/src/fiskaltrust.Middleware.Interface.Client.Soap/fiskaltrust.Middleware.Interface.Client.Soap.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Soap/fiskaltrust.Middleware.Interface.Client.Soap.csproj
@@ -1,30 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>net461;netstandard2.0;net6</TargetFrameworks>
-    <LangVersion>8</LangVersion>
-    <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>net461;net6</TargetFrameworks>
+		<LangVersion>8.0</LangVersion>
+	</PropertyGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net6' ">
-    <PackageReference Include="System.ServiceModel.Http" Version="4.10.0" />
-    <PackageReference Include="System.ServiceModel.NetTcp" Version="4.10.0" />
-    <PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
-  </ItemGroup>
-	
-  <Target DependsOnTargets="ResolveReferences" Name="CopyProjectReferencesToPackage">
-    <ItemGroup>
-      <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
-    </ItemGroup>
-  </Target>
+	<ItemGroup>
+		<PackageReference Include="fiskaltrust.interface" Version="1.3.50-rc1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\fiskaltrust.ifPOS\fiskaltrust.interface.csproj" />
-    <ProjectReference Include="..\fiskaltrust.Middleware.Interface.Client.Common\fiskaltrust.Middleware.Interface.Client.Common.csproj">
-      <PrivateAssets>all</PrivateAssets>
-    </ProjectReference>
-  </ItemGroup>
-  
+	<ItemGroup Condition=" '$(TargetFramework)' == 'net6' ">
+		<PackageReference Include="System.ServiceModel.Http" Version="4.10.0" />
+		<PackageReference Include="System.ServiceModel.NetTcp" Version="4.10.0" />
+		<PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\fiskaltrust.Middleware.Interface.Client.Common\fiskaltrust.Middleware.Interface.Client.Common.csproj">
+			<PrivateAssets>all</PrivateAssets>
+		</ProjectReference>
+	</ItemGroup>
+
 	<ItemGroup>
 		<_PackageFiles Include="$(OutputPath)\net461\fiskaltrust.Middleware.Interface.Client.Common.dll">
 			<BuildAction>None</BuildAction>
@@ -37,29 +33,29 @@
 	</ItemGroup>
 
 	<PropertyGroup>
-    <PackageId>fiskaltrust.Middleware.Interface.Client.Soap</PackageId>
-    <Authors>fiskaltrust</Authors>
-    <Company>fiskaltrust</Company>
-    <PackageLicenseUrl>https://github.com/fiskaltrust/middleware-interface-dotnet/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/fiskaltrust/middleware-interface-dotnet</PackageProjectUrl>
-    <PackageIconUrl>https://portal.fiskaltrust.at/Content/favicons/favicon-64x64.png</PackageIconUrl>
-    <Description>An optional helper implementation to simplify the usage of the fiskaltrust Middleware interface via WCF/SOAP.</Description>
-    <Copyright>Copyright 2020</Copyright>
-    <PackageTags>fiskaltrust interface</PackageTags>
-    <AssemblyCompany>fiskaltrust</AssemblyCompany>
-    <AssemblyProduct>fiskaltrust.Middleware.Interface.Soap</AssemblyProduct>
-  </PropertyGroup>
+		<PackageId>fiskaltrust.Middleware.Interface.Client.Soap</PackageId>
+		<Authors>fiskaltrust</Authors>
+		<Company>fiskaltrust</Company>
+		<PackageLicenseUrl>https://github.com/fiskaltrust/middleware-interface-dotnet/LICENSE</PackageLicenseUrl>
+		<PackageProjectUrl>https://github.com/fiskaltrust/middleware-interface-dotnet</PackageProjectUrl>
+		<PackageIconUrl>https://portal.fiskaltrust.at/Content/favicons/favicon-64x64.png</PackageIconUrl>
+		<Description>An optional helper implementation to simplify the usage of the fiskaltrust Middleware interface via WCF/SOAP.</Description>
+		<Copyright>Copyright 2020</Copyright>
+		<PackageTags>fiskaltrust interface</PackageTags>
+		<AssemblyCompany>fiskaltrust</AssemblyCompany>
+		<AssemblyProduct>fiskaltrust.Middleware.Interface.Soap</AssemblyProduct>
+	</PropertyGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' != 'net6' ">
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
+	<ItemGroup Condition=" '$(TargetFramework)' != 'net6' ">
+		<Reference Include="System" />
+		<Reference Include="System.Core" />
+		<Reference Include="System.ServiceModel" />
+		<Reference Include="System.Xml.Linq" />
+		<Reference Include="System.Data.DataSetExtensions" />
+		<Reference Include="Microsoft.CSharp" />
+		<Reference Include="System.Data" />
+		<Reference Include="System.Net.Http" />
+		<Reference Include="System.Xml" />
+	</ItemGroup>
 
 </Project>
