--- a/src/fiskaltrust.Middleware.Interface.Client.Grpc/fiskaltrust.Middleware.Interface.Client.Grpc.csproj
+++ b/src/fiskaltrust.Middleware.Interface.Client.Grpc/fiskaltrust.Middleware.Interface.Client.Grpc.csproj
@@ -4,8 +4,11 @@
 		<TargetFrameworks>net461;netstandard2.0;net6</TargetFrameworks>
 	</PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="fiskaltrust.interface" Version="1.3.55-rc1" />		
+	</ItemGroup>
+	
 	<ItemGroup Condition=" '$(TargetFramework)' != 'net6' ">
-		<PackageReference Include="fiskaltrust.interface" Version="1.3.50-rc1" />
 		<PackageReference Include="Grpc.Core" Version="2.28.1" />
 		<PackageReference Include="protobuf-net.Grpc.Native" Version="1.0.37" />
 	</ItemGroup>
