--- a/src/fiskaltrust.ifPOS/fiskaltrust.interface.csproj
+++ b/src/fiskaltrust.ifPOS/fiskaltrust.interface.csproj
@@ -58,4 +58,8 @@
     <PackageReference Include="System.Text.Json" Version="9.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
 </Project>
